@@ -377,9 +377,12 @@ class StateServiceImplTest {
             speaker2.setId(2);
             speaker2.setCompanies(List.of(company0));
 
+            Speaker speaker3 = new Speaker();
+            speaker3.setId(3);
+
             Talk talk0 = new Talk();
             talk0.setId(0);
-            talk0.setSpeakerIds(List.of(0L));
+            talk0.setSpeakerIds(List.of(0L, 1L));
             talk0.setSpeakers(List.of(speaker0, speaker1));
 
             Talk talk1 = new Talk();
@@ -392,37 +395,52 @@ class StateServiceImplTest {
             talk2.setSpeakerIds(List.of(0L));
             talk2.setSpeakers(List.of(speaker0));
 
+            Talk talk3 = new Talk();
+            talk3.setId(3);
+            talk3.setSpeakerIds(List.of(3L));
+            talk3.setSpeakers(List.of(speaker3));
+
             Question question0 = new SpeakerQuestion(speaker0);
             Question question1 = new TalkQuestion(List.of(speaker0, speaker1), talk0);
             Question question2 = new TalkQuestion(List.of(speaker1), talk1);
-            Question question3 = new CompanyBySpeakerQuestion(List.of(company0, company1), speaker0);
-            Question question4 = new SpeakerByCompanyQuestion(List.of(speaker0, speaker2), company0);
-            Question question5 = new SpeakerByCompanyQuestion(List.of(speaker1), company1);
+            Question question3 = new TalkQuestion(List.of(speaker3), talk3);
+            Question question4 = new CompanyBySpeakerQuestion(List.of(company0, company1), speaker0);
+            Question question5 = new CompanyBySpeakerQuestion(List.of(company1), speaker1);
+            Question question6 = new SpeakerByCompanyQuestion(List.of(speaker0, speaker2), company0);
+            Question question7 = new SpeakerByCompanyQuestion(List.of(speaker1), company1);
 
             Answer answer0 = new TalkAnswer(talk0);
             Answer answer1 = new TalkAnswer(talk1);
             Answer answer2 = new TalkAnswer(talk2);
             Answer answer3 = new SpeakerAnswer(speaker0);
-            Answer answer4 = new SpeakerAnswer(speaker1);
-            Answer answer5 = new SpeakerAnswer(speaker2);
-            Answer answer6 = new CompanyAnswer(company0);
-            Answer answer7 = new CompanyAnswer(company1);
-            Answer answer8 = new CompanyAnswer(company2);
+            Answer answer4 = new SpeakerAnswer(speaker2);
+            Answer answer5 = new CompanyAnswer(company0);
+            Answer answer6 = new CompanyAnswer(company1);
+            Answer answer7 = new CompanyAnswer(company2);
 
             return Stream.of(
                     arguments(List.of(question0), null, null, GuessMode.GUESS_NAME_BY_PHOTO_MODE, null, List.of(new SpeakerAnswer(speaker0))),
                     arguments(List.of(question0), null, null, GuessMode.GUESS_PHOTO_BY_NAME_MODE, null, List.of(new SpeakerAnswer(speaker0))),
                     arguments(List.of(question0), null, null, GuessMode.GUESS_ACCOUNT_BY_SPEAKER_MODE, null, List.of(new SpeakerAnswer(speaker0))),
                     arguments(List.of(question0), null, null, GuessMode.GUESS_SPEAKER_BY_ACCOUNT_MODE, null, List.of(new SpeakerAnswer(speaker0))),
+
                     arguments(List.of(question1), question1, List.of(answer0), GuessMode.GUESS_TALK_BY_SPEAKER_MODE, null, List.of(new TalkAnswer(talk0))),
                     arguments(List.of(question1, question2), question1, List.of(answer1), GuessMode.GUESS_TALK_BY_SPEAKER_MODE, null, List.of(new TalkAnswer(talk1))),
                     arguments(List.of(question1), question1, List.of(answer2), GuessMode.GUESS_TALK_BY_SPEAKER_MODE, null, Collections.emptyList()),
+                    arguments(List.of(question1), question3, List.of(answer1), GuessMode.GUESS_TALK_BY_SPEAKER_MODE, null, List.of(new TalkAnswer(talk0))),
+
                     arguments(List.of(question1), question1, List.of(answer3), GuessMode.GUESS_SPEAKER_BY_TALK_MODE, null, List.of(new SpeakerAnswer(speaker0))),
-                    arguments(List.of(question1), question1, List.of(answer4), GuessMode.GUESS_SPEAKER_BY_TALK_MODE, null, List.of(new SpeakerAnswer(speaker1))),
-                    arguments(List.of(question1), question1, List.of(answer5), GuessMode.GUESS_SPEAKER_BY_TALK_MODE, null, Collections.emptyList()),
-                    arguments(List.of(question3), question3, List.of(answer6, answer7), GuessMode.GUESS_COMPANY_BY_SPEAKER_MODE, null, List.of(new CompanyAnswer(company0), new CompanyAnswer(company1))),
-                    arguments(List.of(question3), question3, List.of(answer8), GuessMode.GUESS_COMPANY_BY_SPEAKER_MODE, null, Collections.emptyList()),
-                    arguments(List.of(question4, question5), question4, List.of(new SpeakerAnswer(speaker0)), GuessMode.GUESS_SPEAKER_BY_COMPANY_MODE, null, List.of(new SpeakerAnswer(speaker0), new SpeakerAnswer(speaker1))),
+                    arguments(List.of(question1), question2, List.of(answer3), GuessMode.GUESS_SPEAKER_BY_TALK_MODE, null, List.of(new SpeakerAnswer(speaker0))),
+                    arguments(List.of(question1), question1, List.of(answer4), GuessMode.GUESS_SPEAKER_BY_TALK_MODE, null, Collections.emptyList()),
+                    arguments(List.of(question1), question2, List.of(answer4), GuessMode.GUESS_SPEAKER_BY_TALK_MODE, null, List.of(new SpeakerAnswer(speaker0))),
+
+                    arguments(List.of(question4), question4, List.of(answer5, answer6), GuessMode.GUESS_COMPANY_BY_SPEAKER_MODE, null, List.of(new CompanyAnswer(company0), new CompanyAnswer(company1))),
+                    arguments(List.of(question4), question5, List.of(answer7), GuessMode.GUESS_COMPANY_BY_SPEAKER_MODE, null, List.of(new CompanyAnswer(company0))),
+                    arguments(List.of(question4), question4, List.of(answer7), GuessMode.GUESS_COMPANY_BY_SPEAKER_MODE, null, Collections.emptyList()),
+                    arguments(List.of(question4), question5, List.of(answer5), GuessMode.GUESS_COMPANY_BY_SPEAKER_MODE, null, List.of(new CompanyAnswer(company0))),
+
+                    arguments(List.of(question6, question7), question6, List.of(new SpeakerAnswer(speaker0)), GuessMode.GUESS_SPEAKER_BY_COMPANY_MODE, null, List.of(new SpeakerAnswer(speaker0), new SpeakerAnswer(speaker1))),
+
                     arguments(null, null, null, null, IllegalArgumentException.class, null),
                     arguments(List.of(question0), null, null, null, IllegalArgumentException.class, null),
                     arguments(List.of(question1), null, null, null, IllegalArgumentException.class, null),
